This added padding to body to fix heaader being covered by navbar

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,6 +20,7 @@ body {
   background-color: #f4f1ec;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 18px;
+  padding-top: 50PX;
 }
 
 /*
